--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-appear": "^1.3.24",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
