--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "require-context": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
